Refactor entire project to English naming while maintaining security hardening